added custom popup

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -351,6 +351,21 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before</h3>
+                    <p class="popup__text">Eos perferendis rerum id consequatur consequuntur id possimus itaque. Id obcaecati voluptatem ab voluptatum quas aut rerum minus ut quia laudantium id eligendi consequatur non eaque aspernatur aut saepe facilis. Aut eveniet perspiciatis 33 dignissimos ratione et voluptates architecto in sunt tempora eum eligendi optio aut distinctio nobis. Sed quis recusandae At inventore maiores sed vero pariatur a laboriosam dolorem vel galisum explicabo qui cumque ipsum cum corporis eveniet.</p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
         <!-- <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
