--- a/Natours/index.html
+++ b/Natours/index.html
@@ -44,7 +44,7 @@
                     <span class="heading-primary--sub">is where life happens</span>
                </h1>
 
-               <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+               <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
            </div>
         </header>
 
@@ -114,7 +114,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section id="section-tours" class="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -149,7 +149,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -181,7 +181,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -352,13 +352,14 @@
             </div>
         </footer>
 
-        <div class="popup">
+        <div id="popup" class="popup">
             <div class="popup__content">
                 <div class="popup__left">
                     <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
                     <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
                 </div>
                 <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                     <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before</h3>
                     <p class="popup__text">Eos perferendis rerum id consequatur consequuntur id possimus itaque. Id obcaecati voluptatem ab voluptatum quas aut rerum minus ut quia laudantium id eligendi consequatur non eaque aspernatur aut saepe facilis. Aut eveniet perspiciatis 33 dignissimos ratione et voluptates architecto in sunt tempora eum eligendi optio aut distinctio nobis. Sed quis recusandae At inventore maiores sed vero pariatur a laboriosam dolorem vel galisum explicabo qui cumque ipsum cum corporis eveniet.</p>
